--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,19 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-15 23:32:24 -0400 
+%% Created for Evan Bollig at 2013-09-16 01:37:04 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{MPI,
+	Author = {The MPI Forum},
+	Date-Added = {2013-09-16 05:36:59 +0000},
+	Date-Modified = {2013-09-16 05:37:04 +0000},
+	Title = {MPI: A Message Passing Interface},
+	Year = {1993}}
 
 @misc{NVidiaGPUMPI,
 	Author = {J. Kraus},
