--- a/latex/performance_analysis.tex
+++ b/latex/performance_analysis.tex
@@ -11,14 +11,8 @@
 \fi
 
 
-\chapter{Performance Benchmarks}
 
-\authnote{First I need to describe the hardware used. This includes: Troi, Spear, Keeneland; their gpus and RAM, etc. Discuss interconnects (why can't we run multiple kernels on one node of spear)}
-
-\input{performance_content/hardware.tex}
-
-\input{performance_content/optimizations.tex}
-
+%TODO: \authnote{First I need to describe the hardware used. This includes: Troi, Spear, Keeneland; their gpus and RAM, etc. Discuss interconnects (why can't we run multiple kernels on one node of spear)}
 
 
 \ifstandalone
