--- a/latex/implicit_pde_solutions.tex
+++ b/latex/implicit_pde_solutions.tex
@@ -387,7 +387,13 @@ and the pressure function:
 P = Y_6^4 
 \end{align} 
 
-The manufactured solution is shown in Figure~\ref{fig:manufactured_solution}. A Mollweide projection \cite{Mollweide_ref} maps the sphere onto the plane. 
+The manufactured solution is shown in Figure~\ref{fig:manufactured_solution}. A Mollweide projection given as: 
+\begin{align*}
+x &= \frac{2\sqrt{2}}{\pi} \lambda \cos{\theta} \\
+y &= \sqrt{2}\sin{\theta}
+\end{align*}
+
+ maps the sphere onto the plane. 
 
 \begin{figure} 
 \centering
