--- a/latex/performance_content/scaling/cut_from_distributed_solver.tex
+++ b/latex/performance_content/scaling/cut_from_distributed_solver.tex
@@ -55,7 +55,7 @@ CPU, so data must be explicitly copied to/from global device memory on the GPU.
 %\subsubsection{Boundary Conditions} 
 %Boundary conditions are handled on the GPU in the following way: 
 
-dirichlet: kernel copies dirichlet values into place \authnote{Need to dust off code}
+%TODO: dirichlet: kernel copies dirichlet values into place \authnote{Need to dust off code}
 
 
 
@@ -70,55 +70,10 @@ dirichlet: kernel copies dirichlet values into place \authnote{Need to dust off 
 %performance comes with limitations: historically GPUs have always lagged behind the CPU in terms 
 %of flexibility and programmability.
 
- 
+
+%Implementations of RBF methods are known to be in PETSC \cite{Yokota2010}. The method is simple, and straight-forward to code, but the majority of implementations exist in MATLAB. MATLAB is justified as a platform for computing due to its plethora of solvers, preconditioners, toolkits and support for all things ``matrices" (as it should with a name like ``MATrix LABoratory" (MATLAB). MATLAB is a wonderful platform to develop new features for the RBF methods, but the efficiency of the platform limits its ability to scale to very large problems. For such cases the developers recommend implementations in C or FORTRAN. To aid development in C/FORTRAN, one can take full advantage of the decades worth of research in
 
 
-
-Itasca
-
-An Alltoall collective shares .... as in Figure~\ref{fig:mpi_alltoall_visual}. A basic Alltoall collective would work in most cases. However, RBF-FD stencils are not required/guaranteed to be symmetric. As a result, we often have non-uniform sharing across partitions, so an Alltoall would require over-padding all send/receive buffers to allow the maximum receive size times the number of processors. 
-
-In order to avoid excessive padding, we choose the Alltoallv collective, which allows processors to share non-uniform number of bytes with one another. Figure~\ref{fig:mpi_alltoallv_visual} illustrates the benefit of Alltoallv in comparison to Alltoall (Figure~\ref{fig:mpi_alltoall_visual}. By allowing variable number of bytes, the total message size is reduced for all processors. The downside to an alltoallv
-
-
-
-
-The data in the Itasca scaling figures considers the case where an MPI\_Alltoallv or MPI\_Isend/MPI\_Irecv is used. By issuing the receives before encoding the send buffers we ensure that no processes wait unnecessarily long for their collectives to start.
-
-When overlapping GPU computation and communication we further reduce the cost of collectives 
-Note that the overlapping GPU optimization to reduce the collective times also applies here. We can cut the cost of communication by avoiding the transcribe after the receives have completed. 
-
-
-\section{On the use of libraries for parallel solvers}
-
-
-Implementations of RBF methods are known to be in PETSC \cite{Yokota2010}. The method is simple, and straight-forward to code, but the majority of implementations exist in MATLAB. MATLAB is justified as a platform for computing due to its plethora of solvers, preconditioners, toolkits and support for all things ``matrices" (as it should with a name like ``MATrix LABoratory" (MATLAB). MATLAB is a wonderful platform to develop new features for the RBF methods, but the efficiency of the platform limits its ability to scale to very large problems. For such cases the developers recommend implementations in C or FORTRAN. To aid development in C/FORTRAN, one can take full advantage of the decades worth of research in
-
-Since our focus within this work is to lay the foundation for parallel computing
-with RBF-FD, we have made several simplifying assumptions in our code design.
-Libraries like PETsc, Hypre, Trilinos and Deal.ii distribute sparse matrix
-operations in similar fashion to our approach. When work initially began on this
-dissertation, none of these competing libraries contained support for the GPU.
-PETsc is currently developing support for the GPU, but we have not had the
-chance to consider it yet. 
-
-Our codebase began as a prototype demonstrating the feasibility of RBF-FD
-operating on the GPU. Starting from the perspective of RBF-FD as a Lagrangian
-method with stationary nodes, the code was developed as $N$ independent dot
-products of weights and solution values to approximate derivatives. Weights were
-stored linearly in memory, with the solution values read randomly. On the GPU,
-stencils were evaluated independently by threads, or shared by a warp of
-threads. Operating on stencils in this way implied that GPU kernels were to be
-hand written, tuned and optimized. 
-
-Much later, our perspective evolved to see derivative approximation and
-time-stepping as sparse matrix operations. This opened new possibilities for
-optimization and allowed us to forego hand optimization and fine-tuning of GPU
-kernels. With all of the effort put into optimizing sparse operations within
-libraries like CUSP \cite{Bell2009}, ViennaCL \cite{Rupp2010} and even the
-NVidia provided CUSPARSE \cite{CUSPARSE}, formulating the problem in terms of
-sparse matrix operations allows us to quickly prototype on the GPU and leverage
-all of the optimizations available within the third party libraries. 
 
  
 
